<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cloud__weather_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/cloud_background" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Sunny"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Overcast clouds" />

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/weather_icon" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:paddingEnd="16dp"
            android:text="68 °"
            android:textColor="#353535"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="68 °" />

        <TextView
            android:id="@+id/weather_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Los Angeles"
            android:textColor="#232323"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/weather"
        tools:context=".ui.news.NewsFragment">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/topheadlines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif-light"
                        android:text="Top Headlines"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/errorImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:src="@drawable/no_result" />

            <TextView
                android:id="@+id/errorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/errorImage"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="Error Title"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/errorTitle"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="Error Message"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/errorMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/loadingScroller"
                android:text="Retry"
                android:textColor="#fff" />
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>