<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="Map" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="News" />

    <item
        android:id="@+id/tracking"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="Tracking History" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Setting" />

</menu>